--- a/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-row/payload-decoder-row.component.html
+++ b/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-row/payload-decoder-row.component.html
@@ -1,1 +1,18 @@
-<p>payload-decoder-row works!</p>
+<td class="position-relative">
+    <a [routerLink]="['payload-decoder-detail', payloadDecoder.id]" routerLinkActive="active"
+      class="application-link"> {{payloadDecoder.name}}</a>
+</td>
+<td class="position-relative pr-3">
+    {{payloadDecoder.id}}
+    <div class="dropdown position-absolute">
+      <a href="#" role="button" id="tableRowDropdown-{{payloadDecoder.id}}" class="applicationRow__edit dropdown-toggle"
+        data-toggle="dropdown" aria-expanded="false"
+        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+      <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{payloadDecoder.id}}">
+        <li><a (click)="clickDelete()" class="dropdown-item"
+            [routerLink]="">{{ 'PAYLOADDECODER-TABLE-ROW.DELETE' | translate }}</a></li>
+        <li><a class="dropdown-item" [routerLink]="['payload-decoder-edit', payloadDecoder.id]"
+            routerLinkActive="active">{{ 'PAYLOADDECODER-TABLE-ROW.EDIT' | translate }}</a></li>
+      </ul>
+    </div>
+  </td>
