--- a/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-table.component.html
@@ -11,6 +11,7 @@
             class="py-3"
             app-payload-decoder-row
             [payloadDecoder]="payloadDecoder"
+            (deletePayloadDecoder)="deletePayloadDecoder($event)"
         ></tr>
     </tbody>
 </table>
