--- a/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-row/payload-decoder-row.component.html
+++ b/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-row/payload-decoder-row.component.html
@@ -9,10 +9,16 @@
         data-toggle="dropdown" aria-expanded="false"
         [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
       <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{payloadDecoder.id}}">
-        <li><a (click)="clickDelete()" class="dropdown-item"
-            [routerLink]="">{{ 'PAYLOADDECODER-TABLE-ROW.DELETE' | translate }}</a></li>
-        <li><a class="dropdown-item" [routerLink]="['payload-decoder-edit', payloadDecoder.id]"
-            routerLinkActive="active">{{ 'PAYLOADDECODER-TABLE-ROW.EDIT' | translate }}</a></li>
+        <li>
+          <a class="dropdown-item" [routerLink]="['payload-decoder-edit', payloadDecoder.id]"
+            routerLinkActive="active">{{ 'PAYLOAD-DECODER-TABLE-ROW.EDIT' | translate }}
+          </a>
+        </li>
+        <li>
+          <a (click)="clickDelete()" class="dropdown-item"
+          [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
+        </a>
+      </li>
       </ul>
     </div>
   </td>
