--- a/src/app/payload-decoder/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
+++ b/src/app/payload-decoder/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
@@ -1,6 +1,6 @@
 <div class="px-5 py-4">
     <div class="row mb-5">
-      <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
+      <app-top-bar [sort]="sort" [pageLimit]="pageLimit"
         [title]="'NAV.PAYLOAD-DECODER' | translate" [ctaLabel]="'FORM.CREATE-NEW-PAYLOAD-DECODER' | translate"
         [ctaRouterLink]="'payload-decoder-edit'" (updatePageLimit)="updatePageLimit($event)"
         (selectedSortChange)="changeSort($event)"></app-top-bar>
