--- a/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-row/payload-decoder-row.component.html
+++ b/src/app/payload-decoder/payload-decoder/payload-decoder-table/payload-decoder-row/payload-decoder-row.component.html
@@ -1,24 +1,23 @@
 <td class="position-relative">
-    <a [routerLink]="['payload-decoder-detail', payloadDecoder.id]" routerLinkActive="active"
-      class="application-link"> {{payloadDecoder.name}}</a>
+  <a [routerLink]="['payload-decoder-detail', payloadDecoder.id]" routerLinkActive="active" class="application-link">
+    {{payloadDecoder.name}}</a>
 </td>
 <td class="position-relative pr-3">
-    {{payloadDecoder.id}}
-    <div class="dropdown position-absolute">
-      <a href="#" role="button" id="tableRowDropdown-{{payloadDecoder.id}}" class="applicationRow__edit dropdown-toggle"
-        data-toggle="dropdown" aria-expanded="false"
-        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-      <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{payloadDecoder.id}}">
-        <li>
-          <a class="dropdown-item" [routerLink]="['payload-decoder-edit', payloadDecoder.id]"
-            routerLinkActive="active">{{ 'PAYLOAD-DECODER-TABLE-ROW.EDIT' | translate }}
-          </a>
-        </li>
-        <li>
-          <a (click)="clickDelete()" class="dropdown-item"
-          [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
+  {{payloadDecoder.id}}
+  <div class="dropdown position-absolute">
+    <a href="#" role="button" id="tableRowDropdown-{{payloadDecoder.id}}" class="applicationRow__edit dropdown-toggle"
+      data-toggle="dropdown" aria-expanded="false"
+      [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{payloadDecoder.id}}">
+      <li class="dropdown-item">
+        <a [routerLink]="['payload-decoder-edit', payloadDecoder.id]"
+          routerLinkActive="active">{{ 'PAYLOAD-DECODER-TABLE-ROW.EDIT' | translate }}
         </a>
       </li>
-      </ul>
-    </div>
-  </td>
+      <li class="dropdown-item">
+        <a (click)="clickDelete()" [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
+        </a>
+      </li>
+    </ul>
+  </div>
+</td>
