--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -1,32 +1,55 @@
-<div class="table-responsive">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>{{ 'PAYLOAD-DECODER.NAME' | translate }}</th>
-                <th>{{ 'PAYLOAD-DECODER.ID' | translate }}</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let payloadDecoder of payloadDecoders" class="py-3" app-payload-decoder-row
-                [payloadDecoder]="payloadDecoder" (deletePayloadDecoder)="deletePayloadDecoder($event)"></tr>
-        </tbody>
+<div class="mat-elevation-z8">
+    <app-loading-spinner *ngIf=" isLoadingResults">
+    </app-loading-spinner>
+    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+                {{ 'PAYLOAD-DECODER.NAME' | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <a [routerLink]="['payload-decoder-detail', element.id]" routerLinkActive="active"
+                    class="application-link">
+                    {{element.name}}</a>
+            </td>
+        </ng-container>
+
+        <!-- Id Column -->
+        <ng-container matColumnDef="payload-decoder-id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+                {{ 'PAYLOAD-DECODER.ID' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.id }}
+            </td>
+        </ng-container>
+
+        <!-- Menu Column -->
+        <ng-container matColumnDef="menu">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div class="dropdown">
+                    <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
+                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                        <li class="dropdown-item">
+                            <a [routerLink]="['payload-decoder-edit', element.id]"
+                                routerLinkActive="active">{{ 'PAYLOAD-DECODER-TABLE-ROW.EDIT' | translate }}
+                            </a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a (click)="clickDelete(element)"
+                                [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="resultsLength" showFirstLastButtons></mat-paginator>
 </div>
-<!-- <nav *ngIf="pageTotal > 1" [attr.aria-label]="'TABLE.PAGINATION' | translate">
-    <ul class="pagination justify-content-center mt-5">
-        <li class="page-item">
-            <a class="page-link" [routerLink]="" (click)="prevPage()"
-                >Previous</a
-            >
-        </li>
-        <li class="page-item disabled">
-            <div class="page-link" [routerLink]="">
-                {{ pageOffset + 1 }} / {{ pageTotal }}
-            </div>
-        </li>
-        <li class="page-item">
-            <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
-        </li>
-    </ul>
-</nav> -->
