IOT-733: Avoid transforming the model show to the user for payload decoders

--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -30,11 +30,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h4>{{ 'PAYLOAD-DECODER.DECODINGFUNCTION' | translate }}</h4>
-                <pre>
-                    <code>
-                        {{payloadDecoder.decodingFunction}}
-                    </code>
-                </pre>
+                <code><pre>{{payloadDecoder.decodingFunction}}</pre></code>
             </div>
         </div>
     </div>
