--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -1,11 +1,11 @@
 <div class="mat-elevation-z8">
     <app-loading-spinner *ngIf=" isLoadingResults">
     </app-loading-spinner>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
+    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
                 {{ 'PAYLOAD-DECODER.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
@@ -17,7 +17,7 @@
 
         <!-- Id Column -->
         <ng-container matColumnDef="payload-decoder-id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
                 {{ 'PAYLOAD-DECODER.ID' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.id }}
