IOT-597 add org id to create payload decoder, table and detail page

--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -26,6 +26,13 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="float-left">
+                    {{ 'PAYLOAD-DECODER.BELONGS-TO-ORGANIZATION' | translate }} {{payloadDecoder.organization.name}}
+                </div>
+            </div>
+        </div>
     </div>
     <div class=" jumbotron m-md-4 p-md-3">
         <div class="row">
