--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -24,6 +24,14 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="organizationID">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ 'PAYLOAD-DECODER.ORGANIZATION' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.organization.name }}
+            </td>
+        </ng-container>
+
         <!-- Menu Column -->
         <ng-container matColumnDef="menu">
             <th mat-header-cell *matHeaderCellDef></th>
