--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -6,7 +6,7 @@
                 <div class="float-left">
                     <h4> {{ 'PAYLOAD-DECODER.NAME' | translate }} {{payloadDecoder.name}}</h4>
                 </div>
-                <div class="btn-group float-right">
+                <div class="btn-group float-right" *ngIf="payloadDecoder.canEdit">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         {{'PAYLOAD-DECODER.DETAIL.DROPDOWN' | translate}} <span class="caret"></span>
