--- a/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
+++ b/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
@@ -75,7 +75,7 @@
     </div>
     <div class="row mb-5">
       <div class="col-12 d-flex justify-content-center">
-        <div class="btn btn-secondary" (click)="decodePayloadFunction()">
+        <div class="btn btn-secondary" (click)="testPayloadFunction()">
           <div class="d-flex mx-3">
             <div class="mr-3">{{'QUESTION.GIVE-PAYLOADDECODER-TESTBUTTON' | translate}}</div>
             <div class="rotate--90degree">
