IOT-955 removed asterix

--- a/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
+++ b/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
@@ -12,7 +12,7 @@
   <div class="jumbotron m-md-4 p-md-3">
     <div class="row">
       <div class="col-6">
-        <label class="form-label" for="metadata">Navngiv payload decoder *</label>
+        <label class="form-label" for="metadata">Navngiv payload decoder</label>
         <div class="form-group">
           <mat-form-field appearance="outline">
             <mat-label>{{'QUESTION.GIVE-PAYLOADDECODER-NAME' | translate}}</mat-label>
