--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
@@ -1,6 +1,6 @@
 <app-top-bar [title]="'NAV.PAYLOAD-DECODER' | translate"
   [ctaLabel]="'FORM.CREATE-NEW-PAYLOAD-DECODER' | translate" [ctaRouterLink]="'payload-decoder-edit'"></app-top-bar>
 
-<div class="m-md-4 p-md-3">
+<div class="page">
   <app-payload-decoder-table></app-payload-decoder-table>
 </div>
