--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -1,6 +1,6 @@
 <app-top-bar *ngIf="payloadDecoder" [data]="payloadDecoder" [backButton]="backButton" [subPage]="true"></app-top-bar>
 <div *ngIf="payloadDecoder">
-    <div class=" jumbotron m-md-4 p-md-3">
+    <div class=" jumbotron">
         <div class="row">
             <div class="col-xs-12">
                 <div class="float-left">
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <div class=" jumbotron m-md-4 p-md-3">
+    <div class=" jumbotron">
         <div class="row">
             <div class="col-xs-12">
                 <h4>{{ 'PAYLOAD-DECODER.DECODINGFUNCTION' | translate }}</h4>
