--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
@@ -1,6 +1,5 @@
-<app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.PAYLOAD-DECODER' | translate"
-  [ctaLabel]="'FORM.CREATE-NEW-PAYLOAD-DECODER' | translate" [ctaRouterLink]="'payload-decoder-edit'"
-  (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
+<app-top-bar [title]="'NAV.PAYLOAD-DECODER' | translate"
+  [ctaLabel]="'FORM.CREATE-NEW-PAYLOAD-DECODER' | translate" [ctaRouterLink]="'payload-decoder-edit'"></app-top-bar>
 
 <div class="m-md-4 p-md-3">
   <app-payload-decoder-table></app-payload-decoder-table>
