IOT-760 add createdbyname og updatedbyname to payloaddecoder

--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="float-left">
-                    {{ 'PAYLOAD-DECODER.BELONGS-TO-ORGANIZATION' | translate }} {{payloadDecoder.organization?.name}}
+                    {{ 'PAYLOAD-DECODER.BELONGS-TO-ORGANIZATION' | translate }} {{payloadDecoder.organizationName}}
                 </div>
             </div>
         </div>
