--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -1,9 +1,23 @@
-<app-top-bar *ngIf="payloadDecoder" [data]="payloadDecoder" [backButton]="backButton" [subPage]="true"></app-top-bar>
-<div *ngIf="payloadDecoder">
-    <div class=" jumbotron">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="float-left">
+<div>
+    <app-top-bar *ngIf="payloadDecoder" [data]="payloadDecoder" [backButton]="backButton" [subPage]="true"
+        [addDetailDowndown]="true" [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeletePayload()">
+    </app-top-bar>
+    <div *ngIf="payloadDecoder">
+        <div class=" jumbotron">
+            <div class="row">
+                <div class="col-xs-12">
+                    <p><strong>{{ 'PAYLOAD-DECODER.BELONGS-TO-ORGANIZATION' | translate }}
+                        </strong>{{payloadDecoder.organizationName}}</p>
+                    <p *ngIf="payloadDecoder.createdAt">
+                        <strong>{{ 'DEVICE-MODEL.CREATED' | translate }}</strong>{{payloadDecoder.createdAt | dkTime}}<span
+                            *ngIf="payloadDecoder.createdByName">{{payloadDecoder.createdByName | createdUpdatedBy}}</span>
+                    </p>
+                    <p *ngIf="payloadDecoder.createdAt !== payloadDecoder.updatedAt">
+                        <strong>{{ 'DEVICE-MODEL.UPDATED' | translate }}</strong>{{payloadDecoder.updatedAt | dkTime}}
+                        <span *ngIf="payloadDecoder.updatedByName">
+                            {{payloadDecoder.updatedByName | createdUpdatedBy}} </span>
+                    </p>
+                    <!-- <div class="float-left">
                     <h4> {{ 'PAYLOAD-DECODER.NAME' | translate }} {{payloadDecoder.name}}</h4>
                 </div>
                 <div class="btn-group float-md-right dropdown" *ngIf="payloadDecoder.canEdit">
@@ -22,22 +36,20 @@
                             </a>
                         </li>
                     </ul>
+                </div> -->
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="float-left">
-                    {{ 'PAYLOAD-DECODER.BELONGS-TO-ORGANIZATION' | translate }} {{payloadDecoder.organizationName}}
+        <div class=" jumbotron">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>{{ 'PAYLOAD-DECODER.DECODINGFUNCTION' | translate }}</h3>
+                    <!-- <code><pre>{{payloadDecoder.decodingFunction}}</pre></code> -->
+
+                    <ngx-monaco-editor class="big-editor" [options]="editorJsonOutpuOptions"
+                        [(ngModel)]="payloadDecoder.decodingFunction" [ngModelOptions]="{standalone: true}">
+                    </ngx-monaco-editor>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class=" jumbotron">
-        <div class="row">
-            <div class="col-xs-12">
-                <h4>{{ 'PAYLOAD-DECODER.DECODINGFUNCTION' | translate }}</h4>
-                <code><pre>{{payloadDecoder.decodingFunction}}</pre></code>
             </div>
         </div>
     </div>
