--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -1,69 +1,73 @@
 <app-loading-spinner *ngIf="isLoadingResults; else showTable">
 </app-loading-spinner>
-<ng-template class="mat-elevation-z8" #showTable>
-    <app-top-bar-table [component]="true" [addDropdown]="true" [options]="organizations"
-        [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate" (updateSelectedOpt)="filterByOrgId($event)"
-        [dropdownDefaultOption]="'GATEWAY.DROPDOWNDEFAULT' | translate">
-    </app-top-bar-table>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+<ng-template #showTable>
+    <div class="mat-elevation-z8">
+        <app-top-bar-table [component]="true" [addDropdown]="true" [options]="organizations"
+            [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate" (updateSelectedOpt)="filterByOrgId($event)"
+            [dropdownDefaultOption]="'GATEWAY.DROPDOWNDEFAULT' | translate">
+        </app-top-bar-table>
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
+            matSortDisableClear>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'PAYLOAD-DECODER.NAME' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['payload-decoder-detail', element.id]" routerLinkActive="active"
-                    class="application-link">
-                    {{element.name}}</a>
-            </td>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'PAYLOAD-DECODER.NAME' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    <a [routerLink]="['payload-decoder-detail', element.id]" routerLinkActive="active"
+                        class="application-link">
+                        {{element.name}}</a>
+                </td>
+            </ng-container>
 
-        <!-- Id Column -->
-        <ng-container matColumnDef="payload-decoder-id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'PAYLOAD-DECODER.ID' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.id }}
-            </td>
-        </ng-container>
+            <!-- Id Column -->
+            <ng-container matColumnDef="payload-decoder-id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'PAYLOAD-DECODER.ID' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.id }}
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="organizationID">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'PAYLOAD-DECODER.ORGANIZATION' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.organization?.name }}
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="organizationID">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'PAYLOAD-DECODER.ORGANIZATION' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.organization?.name }}
+                </td>
+            </ng-container>
 
-        <!-- Menu Column -->
-        <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <div class="dropdown" *ngIf="element.canEdit">
-                    <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
-                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu dropdown-menu--table"
-                        attr.aria-labelledby="tableRowDropdown-{{element.id}}">
-                        <li class="dropdown-item">
-                            <a [routerLink]="['payload-decoder-edit', element.id]"
-                                routerLinkActive="active">{{ 'PAYLOAD-DECODER-TABLE-ROW.EDIT' | translate }}
-                            </a>
-                        </li>
-                        <li class="dropdown-item">
-                            <a (click)="clickDelete(element)"
-                                [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-        </ng-container>
+            <!-- Menu Column -->
+            <ng-container matColumnDef="menu">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="dropdown" *ngIf="element.canEdit">
+                        <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
+                            class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                        <ul class="dropdown-menu dropdown-menu--table"
+                            attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                            <li class="dropdown-item">
+                                <a [routerLink]="['payload-decoder-edit', element.id]"
+                                    routerLinkActive="active">{{ 'PAYLOAD-DECODER-TABLE-ROW.EDIT' | translate }}
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a (click)="clickDelete(element)"
+                                    [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
-    </mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
+            showFirstLastButtons>
+        </mat-paginator>
+    </div>
 </ng-template>
