--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-list.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <div class="jumbotron--table">
+      <div class="jumbotron">
         <app-payload-decoder-table></app-payload-decoder-table>
       </div>
     </div>
