--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -9,15 +9,7 @@
                     <h3>{{ 'PAYLOAD-DECODER.DETAILS' | translate }}</h3>
                     <p><strong>{{ 'PAYLOAD-DECODER.BELONGS-TO-ORGANIZATION' | translate }}
                         </strong>{{payloadDecoder.organizationName}}</p>
-                    <p *ngIf="payloadDecoder.createdAt">
-                        <strong>{{ 'PAYLOAD-DECODER.CREATED' | translate }}</strong>{{payloadDecoder.createdAt | dkTime}}<span
-                            *ngIf="payloadDecoder.createdByName">{{payloadDecoder.createdByName | createdUpdatedBy}}</span>
-                    </p>
-                    <p *ngIf="payloadDecoder.createdAt !== payloadDecoder.updatedAt">
-                        <strong>{{ 'PAYLOAD-DECODER.UPDATED' | translate }}</strong>{{payloadDecoder.updatedAt | dkTime}}
-                        <span *ngIf="payloadDecoder.updatedByName">
-                            {{payloadDecoder.updatedByName | createdUpdatedBy}} </span>
-                    </p>
+                    <app-general-details [data]="payloadDecoder"></app-general-details>
                 </div>
             </div>
         </div>
@@ -25,7 +17,6 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h3>{{ 'PAYLOAD-DECODER.DECODINGFUNCTION' | translate }}</h3>
-
                     <ngx-monaco-editor class="big-editor" [options]="editorJsonOutpuOptions"
                         [(ngModel)]="payloadDecoder.decodingFunction" [ngModelOptions]="{standalone: true}">
                     </ngx-monaco-editor>
@@ -36,8 +27,6 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h3>{{ 'PAYLOAD-DECODER.IOT-DEVICES' | translate }}</h3>
-                    <!-- <code><pre>{{payloadDecoder.decodingFunction}}</pre></code> -->
-
                     <app-iot-device-minimal-table [payloadDecoder]="payloadDecoder"></app-iot-device-minimal-table>
                 </div>
             </div>
