Limit app admin to own apps

--- a/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/payload-decoder-detail.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-top-bar *ngIf="payloadDecoder" [data]="payloadDecoder" [backButton]="backButton" [subPage]="true"
         [addDetailDowndown]="true" [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeletePayload()"
-        [canEdit]="canEdit">
+        [canEdit]="payloadDecoder?.canEdit">
     </app-top-bar>
     <div *ngIf="payloadDecoder">
         <div class=" jumbotron">
