--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -54,7 +54,7 @@
                             </li>
                             <li class="dropdown-item">
                                 <a (click)="clickDelete(element)"
-                                    [routerLink]="">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
+                                    [routerLink]="[]">{{ 'PAYLOAD-DECODER-TABLE-ROW.DELETE' | translate }}
                                 </a>
                             </li>
                         </ul>
